<resources>
    <string name="app_name">LIBRI-DS3T</string>
    <string name="cadastroUsuarioTitulo">CADASTRO DE USUÁRIOS</string>
    <string name="txtNome">NOME</string>
    <string name="txtSobreNome">SOBRENOME</string>
    <string name="txtEmail">E-MAIL</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtSenha">SENHA</string>
    <string name="cadastrarUsuario">CADASTRAR</string>
    <string name="titulo_cadastro_usuario">CADASTRO DE USUÁRIO</string>
    <string name="mensagem_cadastro_usuario">VOCÊ ESTÁ SE CADASTRANDO NO APP LIBRI.</string>
    <string name="cadUsuario">CADASTRAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="cadastro_ok">CADASTRO EFETUADO COM SUCESSO!</string>
    <string name="cadastro_erro">ERRO AO CADASTRAR!</string>

    <!--    R.strings da activity_cadastro_livro.xml -->
    <string name="cadastroLivroTitulo">CADASTRO DE LIVROS</string>
    <string name="txtTitulo">TÍTULO</string>
    <string name="txtDescricao">DESCRIÇÃO</string>
    <string name="txtFoto">FOTO</string>
    <string name="titulo_cadastro_livro">CADASTRO DE LIVROS</string>
    <string name="mensagem_cadastro_livro">VOCÊ ESTÁ CADASTRANDO UM LIVRO NO APP LIBRE!</string>
    <string name="txtUsuario">LOGIN</string>
    <string name="entrarLogin">ENTRAR</string>
    <string name="cadastrarLogin">CADASTRAR-SE</string>
</resources>