<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastroUsuarioTitulo"
        style="@style/textTitle"/>

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtNome"
        style="@style/editTextForm"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtSobreNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtSobreNome"
        style="@style/editTextForm"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        style="@style/editTextForm"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLogin"
        style="@style/editTextForm"
        android:inputType="text"/>

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtSenha"
        style="@style/editTextForm"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnCadastrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrarUsuario"
        style="@style/buttonForm"/>

</LinearLayout>

</ScrollView>