<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroLivro"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastroLivroTitulo"
            style="@style/textTitle"/>

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtTitulo"
            style="@style/editTextForm"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtDescricao"
            style="@style/editTextForm"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtFoto"
            style="@style/editTextForm"
            android:inputType="text"/>

        <Button
            android:id="@+id/btnCadastrarLivro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrarUsuario"
            style="@style/buttonForm"/>



    </LinearLayout>

</ScrollView>