<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtUsuario"
            style="@style/editTextForm"
            android:inputType="text"/>

        <EditText
            android:id="@+id/txtSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtSenha"
            style="@style/editTextForm"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnEntrarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrarLogin"
            style="@style/buttonForm"/>

        <Button
            android:id="@+id/btnCadastrarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrarLogin"
            style="@style/buttonForm"/>

    </LinearLayout>

</ScrollView>